%% QForge database schema after M3 — Papers lifecycle + export
%% SCHEMA UNCHANGED SINCE M2.
%% M3 adds behavior only: repetition control derived from paper_questions
%% (most-recent-N papers per subject) and PDF/DOCX export from existing columns.
erDiagram
    USERS ||--o{ BLUEPRINTS : owns
    USERS ||--o{ PAPERS : owns
    SUBJECTS ||--o{ UNITS : "has"
    SUBJECTS ||--o{ QUESTIONS : "scopes"
    SUBJECTS ||--o{ BLUEPRINTS : "targets"
    SUBJECTS ||--o{ PAPERS : "for"
    UNITS ||--o{ QUESTIONS : "groups"
    UNITS ||--o{ PAPER_QUESTIONS : "tags"
    BLUEPRINTS ||--o{ PAPERS : "generates"
    PAPERS ||--o{ PAPER_QUESTIONS : "contains"
    QUESTIONS ||--o{ PAPER_QUESTIONS : "appears in"

    USERS {
        bigint id PK
        enum role "teacher|admin"
    }
    SUBJECTS {
        bigint id PK
        string code UK
    }
    UNITS {
        bigint id PK
        bigint subject_id FK
    }
    QUESTIONS {
        bigint id PK
        bigint subject_id FK
        bigint unit_id FK
        int used_count "incremented on use"
    }
    BLUEPRINTS {
        bigint id PK
        bigint owner_id FK
        bigint subject_id FK
        json definition "exclusionRules.lastNPapers"
    }
    PAPERS {
        bigint id PK
        bigint owner_id FK
        bigint blueprint_id FK "nullable (M3.1)"
        enum origin "generated|imported (M3.1)"
        bigint subject_id FK
        enum status "draft|saved|exported"
        int export_count
        timestamp generated_at
    }
    PAPER_QUESTIONS {
        bigint id PK
        bigint paper_id FK
        bigint question_id FK
        bigint unit_id FK
        bool is_ai
    }
